frontend/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: taskedin-fe
  namespace: taskedin
  labels:
    app: taskedin-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskedin-fe
  template:
    metadata:
      labels:
        app: taskedin-fe
    spec:
      containers:
      - name: taskedin-fe
        image: DOCKER_IMAGE
        resources:
          requests:
            memory: 200M
            cpu: 100m
          limits:
            memory: 500M
            cpu: 200m
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: taskedin-fe-svc
  namespace: taskedin
spec:
  selector:
    app: taskedin-fe
  ports:
  - port: 3000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskedin-fe-ingress
  namespace: taskedin
  annotations:
    cert-manager.io/cluster-issuer: production
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: taskedin-fe-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: taskedin-fe.s-tech.digital
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: taskedin-fe-svc
              port: 
                number: 3000
  tls:
    - hosts:
        - taskedin-fe.s-tech.digital
      secretName: secret-tls-fe-production
